--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ scipy==1.4.1
 six==1.14.0
 sklearn==0.0
 SQLAlchemy==1.3.13
-tensorboard==2.0.0b1
+tensorboard==2.1.0
 tensorflow==2.0.0b1
 tensorflow-estimator==2.0.0b1
 tensorflow-gpu==2.0.0b1
