--- a/requirements.txt
+++ b/requirements.txt
@@ -63,9 +63,9 @@ sklearn==0.0
 SQLAlchemy==1.3.13
 tensorboard==2.1.0
 tensorflow==2.0.0b1
-tensorflow-estimator==2.0.0b1
-tensorflow-gpu==2.0.0b1
-tensorflow-gpu-estimator==2.0.0b1
+tensorflow-estimator==2.1.0
+tensorflow-gpu==2.1.0
+tensorflow-gpu-estimator==2.1.0
 termcolor==1.1.0
 typed-ast==1.4.1
 urllib3==1.25.8
