--- a/requirements.txt
+++ b/requirements.txt
@@ -64,7 +64,7 @@ SQLAlchemy==1.3.13
 tensorboard==2.1.0
 tensorflow==2.0.0b1
 tensorflow-estimator==2.1.0
-tensorflow-gpu==2.1.0
+tensorflow-gpu==2.0.0b1
 tensorflow-gpu-estimator==2.1.0
 termcolor==1.1.0
 typed-ast==1.4.1
