--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,6 @@ mccabe==0.6.1
 networkx==2.4
 numpy==1.18.1
 oauthlib==3.1.0
-opencv-python==4.2.0.32
 opt-einsum==3.1.0
 pandas==1.0.0
 Pillow==7.0.0
@@ -62,9 +61,9 @@ six==1.14.0
 sklearn==0.0
 SQLAlchemy==1.3.13
 tensorboard==2.1.0
-tensorflow==2.0.0b1
+tensorflow==2.1.0
 tensorflow-estimator==2.1.0
-tensorflow-gpu==2.0.0b1
+tensorflow-gpu==2.1.0
 tensorflow-gpu-estimator==2.1.0
 termcolor==1.1.0
 typed-ast==1.4.1
